enabled gradlew (#6)
compiler warning (clazz.newInstance() deprecation)